--- a/prework-study-guide/index.html
+++ b/prework-study-guide/index.html
@@ -4,6 +4,8 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <!rel means the relationship between the current document and the linked document>
+    <link rel="stylesheet" href="./assets/style.css">
     <title>Prework Study Guide</title>
   </head>
 
@@ -31,6 +33,13 @@
         <h2>CSS</h2>
         <ul>
           <li>Enter your CSS notes here</li>
+          <li>Margin indicates how much space we want around the outside of an element.</li>
+          <li>Padding indicates how much space we want around the content inside an element.</li>
+          <li>link connects our current file to the style sheet</li>
+          <li>It is used hexadecimal system to stablish colors</li>
+          <li>We can add css by creating a new branch</li>
+          <li>The style mostly used is the external</li>
+          <li>Two or more elements that will share the same properties can be sepatated by placing a comma between them.</li>
         </ul>
       </section>
 
