--- a/prework-study-guide/index.html
+++ b/prework-study-guide/index.html
@@ -14,13 +14,13 @@
     <header id="top">
       <h1>Prework Study Guide</h1>
       <img src="./assets/bowtie-cat.png" alt="Profile image of cat wearing a bow tie." />
+      <h2> Open the console to see What's Happening</h2>
     </header>
 
     <main>
       <section class="card" id="html-section">
         <h2>HTML</h2>
         <ul>
-          <li>Enter your HTML notes here</li>
           <li>The body element represents the visible content shown to the user</li>
           <li>The head element is not shown to the user</li>
           <li>meta contains additional information about the webpage</li>
@@ -32,7 +32,6 @@
       <section class="card" id="css-section">
         <h2>CSS</h2>
         <ul>
-          <li>Enter your CSS notes here</li>
           <li>Margin indicates how much space we want around the outside of an element.</li>
           <li>Padding indicates how much space we want around the content inside an element.</li>
           <li>link connects our current file to the style sheet</li>
@@ -46,7 +45,6 @@
       <section class="card" id="git-section">
         <h2>Git</h2>
           <ul>
-            <li>Enter your Git notes here</li>
             <li>Branch adds information without alterating the main branch</li>
             <li>feature is a function that our application offers to the user</li>
             <li>GitHub is a cloud based system</li>
@@ -65,5 +63,6 @@
     <footer>
       <p>I can code!</p>
     </footer>
+    <script src = "./assets/script.js"></script>
   </body>
 </html>
