--- a/prework-study-guide/index.html
+++ b/prework-study-guide/index.html
@@ -24,8 +24,9 @@
           <li>The body element represents the visible content shown to the user</li>
           <li>The head element is not shown to the user</li>
           <li>meta contains additional information about the webpage</li>
-          <li>Inside html element is included language</li>
+          <li>Language is included HTML tag</li>
           <li>body is semantic because every element defines its own role</li>
+          <li>Semicolons are not required at the end of each statement</li>
         </ul>
       </section>
 
@@ -55,7 +56,14 @@
       <section class="card" id="javascript-section">
         <h2>Javascript</h2>
           <ul>
-            <il>Enter your Javascript notes here</il>
+            <il>A variable is a named container that allows us to store data in our code.</il>
+            <li>Control flow is the order in which a computer executes code in a script.</li>
+            <li>Add semicolons after a statement is completed</li>
+            <li>For loop can alter control flow</li>
+            <li>Array can contain a group of data</li>
+            <li>elements in a for loop are the starting point of the data, the length of the array and the variable stated is incresing by 1</li>
+            <li>All strings are cited between quotation marks</li>
+            <li>A function is distinguished by its parenthesis after the function's name</li>
           </ul>
       </section>
     </main>
