--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
   <body>
     <header id="top">
       <h1>Prework Study Guide</h1>
-      <img src="./assets/bowtie-cat.png" alt="Profile image of cat wearing a bow tie." />
+      <img src="bowtie-cat.png" alt="Profile image of cat wearing a bow tie." />
       <h2> Open the console to see What's Happening</h2>
     </header>
 
